--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="온라인 전시회 플랫폼, 호잇" />
-    <title>호잇</title>
+    <title>호잇 — 프로젝트 아카이브 서비스</title>
   </head>
   <body>
     <div id="root"></div>
